FLOW/www/css/messages.css
.fmessages-bar {
	display: none;
}

.loading_chat_list {
	top: calc(44 * var(--custom-vh));
	z-index: 1;
}

.no_conversation_yet
{
	width: 100vw;
    font-family: "Roboto-Regular";
    color: #92abb2;
    opacity: 0.5;
    top: calc(50 * var(--custom-vh));
    text-align: center;
    position: absolute;
}

.loading_message {
	top: calc(44 * var(--custom-vh));
}

.no_results_messages {
	margin-top: calc(40 * var(--custom-vh));
}

.noMessageInConv {
	width: 100%;
	height: 100%;
	left: 5vw;
	font-family: "Roboto-Regular";
	color: #92abb2;
	opacity: 0.5;
	display: flex;
	align-items: center;
	justify-content: center;
}

#InAppNotifNewMessageIcone {
    display: none;
    width: calc(1.75 * var(--custom-vh));
    margin-top: calc(1 * var(--custom-vh));
    margin-right: 1vw;
}


#InAppNotifNewMessageUsername {
	display: none;
    top: calc(0.75 * var(--custom-vh));
    font-size: 13px;
    color: #FFF;
    font-family: 'Roboto-Bold';
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
   
}

#InAppNotifNewMessage {
	position: absolute;
	overflow: hidden;
	white-space: nowrap;
	text-overflow: ellipsis;
	top: calc(1.5 * var(--custom-vh))
}

.fmessages-search-bar {
	position: absolute;
	top: calc(7.5 * var(--custom-vh));
	left: 25px;
	width: calc(100vw - (44px + 50px + 40px + 25px));
	height: 40px;
	line-height: 40px;
	padding: 0;
	padding-left: 40px;
	/* padding-right: 2vw; */
	/* text-align: center; */
	border-radius: 50px;
	border: 1px solid #92abb2;
	box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.1);
	/* font-size: 15px; */
	font-family: "Roboto-Light";
	font-size: 15px !important;
	color: #92abb2;
	-webkit-appearance: none;
}

.fmessages-search-bar::placeholder {
	font-size: 15px;
	font-family: "Roboto-Light";
	color: #92abb2;
}

.fmessages-bar>.search_icon {
	opacity: 1;
	top: calc(7.5 * var(--custom-vh) + 2px);
	left: 28px;
	height: 40px;
	width: 40px;
	background-size: 50%;
}

.fmessages-bar>label {
	position: absolute;
	top: 0;
	left: 0;
	width: 100vw;
	text-align: center;
	height: calc(8 * var(--custom-vh));
	line-height: calc(8 * var(--custom-vh));
	font-family: "Roboto-Bold";
	font-size: 20px;
	color: #1a84ef;
}


#new_conversation {
	position: absolute;
	height: 44px;
	width: 44px;
	right: 25px;
	top: calc(7.5* var(--custom-vh) - 2px);
	background: #1A84EF;
	border-radius: 22px;
	box-shadow: 0px 3px 6px rgba(26, 132, 239, 0.4);
	display: flex;
	align-items: center;
	justify-content: center;
	color: white;
	font-size: 25px;
}


#block_chat_contrainer {
	margin-top: calc(14 * var(--custom-vh)) !important;
	overflow-y: scroll;
	height: calc(79*var(--custom-vh));
	background: #F0EFF3;
}

.fblock_chat {
	position: relative;
	width: calc(100vw - 20px);
	height: calc(10 * var(--custom-vh));
	background-color: rgba(26, 132, 239, 0.28);
	transition-duration: 0.2s;
	border-radius: 5px;
	margin-top: 5px;
	margin-left: 10px;
}

.fblock_chat:active {
	background-color: rgba(26, 132, 239, 0.28);
}

.fphoto_block_chat {
	position: absolute;
	width: calc(7 * var(--custom-vh));
	height: calc(7 * var(--custom-vh));
	top: calc(1.5 * var(--custom-vh));
	left: 2vw;
	border-radius: calc(7 * var(--custom-vh));
	/* border: 1.5px solid rgb(255, 255, 255); */
	/* box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.2); */
	background-size: cover;
	background-position: center;
	pointer-events: none;
}

.fconversation_title {
	position: absolute;
	top: calc(2.5 * var(--custom-vh));
	left: 20vw;
	font-size: 16px;
	color: #495969;
	font-family: "Roboto-Regular";
}

.fblock_chat_text {
	font-family: "Roboto-Regular";
	position: absolute;
	top: calc(5.5 * var(--custom-vh));
	left: 20vw;
	color: #9095A4;
	font-size: 13px;
	width: 60vw;
	text-overflow: ellipsis;
	overflow: hidden;
	white-space: nowrap;
}

.fblock_chat_dots {
	position: absolute;
	right: 10px;
	width: 20px;
	height: 15px;
	top: 5px;
	display: block;
	object-fit: contain;
}

.fblock_chat_time {
	position: absolute;
	top: calc(6.5 * var(--custom-vh));
	right: 10px;
	color: #9095A4;
	font-size: 11px;
	font-family: "Roboto-Regular";
	padding-left: 10px;
}

.fconversation_title {
	position: absolute;
	top: calc(2.5 * var(--custom-vh));
	left: 20vw;
	font-size: 17px;
	color: #495969;
	font-family: "Roboto-Regular";
}

.fblock_chat_text {
	font-family: "Roboto-Regular";
	position: absolute;
	top: calc(6 * var(--custom-vh));
	left: 20vw;
	color: #9095A4;
	font-size: 13px;
	width: 60vw;
	text-overflow: ellipsis;
	overflow: hidden;
	white-space: nowrap;
}

.fblock_chat_dots {
	position: absolute;
	right: 10px;
	width: 20px;
	height: 15px;
	top: 5px;
	display: block;
	object-fit: contain;
}

.fblock_chat_time {
	position: absolute;
	top: calc(6 * var(--custom-vh));
	right: 10px;
	color: #DBDBEF;
	font-size: 13px;
	font-family: "Roboto-Regular";
	padding-left: 10px;
}





/*------------------------------------------POPUP create-conversation-----------------------------*/

.create_conversation_header {
	position: absolute;
	top: 0;
	left: 0;
	background-color: #f7f7f8;
	height: calc(11 * var(--custom-vh));
	width: 100vw;
	box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.05);
	z-index: 2;
}

#create-conversation_back_button {
	position: absolute;
	left: 5vw;
	top: calc(5.5* var(--custom-vh));
	width: 30px;
	height: 30px;
	object-fit: contain;
	opacity: 0.5;
}

#create-conversation_title {
	position: absolute;
	text-align: center;
	top: calc(1 * var(--custom-vh));
	width: 100vw;
	font-size: 18px;
	color: #1a84ef;
	pointer-events: none;
}


.create-conversation-search-bar {
	position: absolute;
	top: calc(4.5 * var(--custom-vh));
	left: 17vw;
	width: 60vw;
	height: 40px;
	line-height: 40px;
	padding-top: 0;
	padding-bottom: 0;
	padding-left: 4vw;
	padding-right: 2vw;
	border-radius: 50px;
	border: 1px solid #92abb2;
	box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.1);
	font-size: 15px;
	font-family: "Roboto-Light";
	color: #92abb2;
	-webkit-appearance: none;
	text-align: center;
}
/* ... */

